--- a/.prettierrc
+++ b/.prettierrc
@@ -1,16 +1,16 @@
 {
-    "quoteProps": "preserve",
-    "jsxSingleQuote": false,
-    "bracketSameLine": true,
-    "arrowParens": "always",
-    "endOfLine": "lf",
-    "printWidth": 120,
-    "tabWidth": 2,
-    "useTabs": false,
-    "semi": false,
-    "singleQuote": true,
-    "trailingComma": "all",
-    "bracketSpacing": true,
-    "proseWrap": "always",
-    "stylelintIntegration": true
+  "quoteProps": "preserve",
+  "jsxSingleQuote": false,
+  "bracketSameLine": true,
+  "arrowParens": "always",
+  "endOfLine": "lf",
+  "printWidth": 120,
+  "tabWidth": 2,
+  "useTabs": false,
+  "semi": false,
+  "singleQuote": true,
+  "trailingComma": "none",
+  "bracketSpacing": true,
+  "proseWrap": "always",
+  "stylelintIntegration": true
 }
